--- a/function/01.call.html
+++ b/function/01.call.html
@@ -4,7 +4,7 @@
  * @Author: by_mori
  * @Date: 2021-09-27 10:55:33
  * @LastEditors: by_mori
- * @LastEditTime: 2021-09-27 11:02:04
+ * @LastEditTime: 2021-09-27 12:01:33
 -->
 <!DOCTYPE html>
 <html lang="en">
@@ -13,7 +13,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="src/function/call.js"></script>
+    <script src="../src/function/call.js"></script>
   </head>
   <body>
     <script>
