--- a/function/03.bind.html
+++ b/function/03.bind.html
@@ -13,8 +13,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="src/function/bind.js"></script>
-    <script src="src/function/call.js"></script>
+    <script src="../src/function/bind.js"></script>
+    <script src="../src/function/call.js"></script>
   </head>
   <body>
     <script>
